--- a/src/App.css
+++ b/src/App.css
@@ -39,13 +39,14 @@
 
 .meme img {
   width: 100%;
+  display: block;
 }
 
 .meme span {
   position: absolute;
   width: 100%;
   left: 0px;
-  margin-top: 10.5em;
+  margin-top: 9.6em;
   font-size: 2em;
   color: white;
   text-shadow: -3px -3px 0 #000, 0 -3px 0 #000, 3px -3px 0 #000, 3px 0 0 #000,
@@ -53,5 +54,5 @@
 }
 
 .meme span:nth-child(1) {
-  margin-top: 1.5em;
+  margin-top: 0.5em;
 }
